--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -56,7 +56,13 @@ a {
   position: relative;
   overflow: visible;
 }
-
+.waifus {
+  display: none;
+}
+.dark-mode .waifus {
+  display: flex;
+  justify-content: center;
+}
 a.waifu::after {
   content: "";
   display: none;
