--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -5,38 +5,18 @@
     --white: rgb(242, 242, 242);
     --red: rgb(255, 0, 0);
 
-  }
-  
-  html {
-    font-family: 'Microsoft Jhenghei', 'lanting', Arial;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-    display: block;
-    overflow: auto !important;
-  }
-  
-  ::selection {
-    background-color: var(--black); /* Màu nền khi bôi đen */
-    color:var(--blue); /* Màu chữ khi bôi đen */
-  }
+}
 
-  .container {
-    display: flex;
-    justify-content: center;
+.dark-mode .real {
+  color: rgb(255, 255, 255) !important;
+}
 
-    /* background-image: url(./assets/image/Shinomia.jpg); */
-  }
+.dark-mode .main h2 {
+  color: white;
+  text-align: center;
+}
 
-  .content {
-    display: block;
-    margin-top: 20px;
-    margin-left:  20px;
-  }
+.main img {
+  max-width: 100vw;
 
-.img {
-  width: 80vw;
-  height: auto;
 }
