--- a/assets/css/style_main.css
+++ b/assets/css/style_main.css
@@ -17,7 +17,7 @@
 
   color: var(--black);
   display: flex;
-  flex-basis: 0%;
+  /* flex-basis: 0%; */
   flex-direction:column;
 
   align-items: center;
