--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 /* Color */
 :root {
   --blue:  rgb(0, 242, 255);
-  --black: rgb(0,0,0);
-  --white: rgb(242, 242, 242);
+  --black: rgb(0, 0, 0);
+  --white: rgb(255, 255, 255);
   --red: rgb(255, 0, 0);
 }
 
@@ -11,9 +11,10 @@ html {
 }
 
 body {
-  transition: background-color 1s cubic-bezier(0.5, 0.1, 0.5, 1);
-  margin: 0;
-  padding: 0;
+  background-color: var(--black);
+  /* transition: background-color 1s cubic-bezier(0.5, 0.1, 0.5, 1); */
+  /* margin: 0;
+  padding: 0; */
   display: block;
   max-height: 100vh;
   max-width: 100vw;
@@ -25,7 +26,7 @@ body {
 .main{
   width: 100vw;
 
-  color: var(--black);
+  color: var(--white);
   display: flex;
   flex-direction:column;
   align-items: center;
@@ -37,11 +38,22 @@ body {
 }
 
 ::selection {
-  background-color: var(--black); /* Màu nền khi bôi đen */
-  color:var(--blue); /* Màu chữ khi bôi đen */
+  background-color: var(--white); /* Màu nền khi bôi đen */
+  color:var(--black); /* Màu chữ khi bôi đen */
 }
-  
-.dark-mode ::selection  {
+
+
+
+/*______________ [ light-mode ] _____________________________________________________________________*/
+body.light-mode  {
+  background-color: var(--white);
+  /* transition: background-color 1s cubic-bezier(0.5, 0.1, 0.5, 1); */
+}
+
+.light-mode ::selection  {
   background-color: var(--black); /* Màu nền khi bôi đen */
   color: var(--blue); /* Màu chữ khi bôi đen */
 }
+
+
+
