--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,9 +1,9 @@
 /* Color */
 :root {
-    --blue:  rgb(0, 242, 255);
-    --black: rgb(0,0,0);
-    --white: rgb(242, 242, 242);
-    --red: rgb(255, 0, 0);
+  --blue:  rgb(0, 242, 255);
+  --black: rgb(0,0,0);
+  --white: rgb(242, 242, 242);
+  --red: rgb(255, 0, 0);
 }
 
 /*_______________________________________________________________ [ Main ] ____________________*/
@@ -36,8 +36,8 @@
   width: 76%;
 
   z-index: 2;
-
 }
+
 .avt {
   display: flex;
   justify-content: center;
@@ -46,6 +46,7 @@
   height: 168px;
   width: 100%;
 }
+
 .myavt {
   display: block;
   border: 7px double var(--blue);
@@ -69,6 +70,7 @@
   margin-top: 22px;
   color: var(--white);
 }
+
 .description {
   display: flex;
   text-align: center;
@@ -84,6 +86,7 @@ section #services {
   padding-left: 0;
   margin: 0;
 }
+
 section #services li {
   display: inline-block;
   margin: 10px;
@@ -136,7 +139,7 @@ section #services li div:hover {
 
 /*______________________ [ Waves ] _____________________________________________________________*/
 .div-wave {
-  display: none;
+  display: block;
   height: 121px;
   width: 200vh;
 
@@ -360,6 +363,12 @@ section #services li div:hover {
 
 /*______________ [ light-mode ] _____________________________________________________________________*/
 
-.light-mode .div-wave,.light-mode .circles {
+.light-mode .div-wave, .light-mode .circles {
   display: flex;
+}
+
+.light-mode .name,
+.light-mode .description,
+.light-mode section #services li a {
+  color: var(--black);
 }
