--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -2,22 +2,31 @@
 :root {
     --blue:  rgb(0, 242, 255);
     --black: rgb(0,0,0);
-    --white: rgb(242, 242, 242);
+    --white: rgb(255, 255, 255);
     --red: rgb(255, 0, 0);
 
 }
 
-.dark-mode .real {
-  color: rgb(255, 255, 255) !important;
+.main h2 {
+  color: var(--white);
+  text-align: center;
 }
 
-.dark-mode .main h2 {
-  color: white;
+.light-mode .main h2 {
+  color: var(--black);
   text-align: center;
 }
 
 .main img {
+  margin-top: 30px;
   max-width: 100vw;
   border: 3px double pink;
-
 }
+
+.real {
+  color: var(--white) !important;
+}
+.light-mode .real {
+  color: rgb(0, 0, 0) !important;
+}
+
