--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -18,9 +18,23 @@
 }
 
 .main img {
-  margin-top: 30px;
+  /* margin-top: 20px; */
   max-width: 100vw;
+  width: 800px;
   border: 3px double pink;
+}
+
+.main a {
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
+  background-color: rgb(255, 119, 0);
+  padding: 10px;
+  border-radius: 10px;
+}
+.main a:hover {
+  text-decoration: underline;
+
 }
 
 .real {
