--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -1,12 +1,69 @@
 
+body {
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
+    
+}
 .main {
-    display: grid;
-    gap: 30px;
+    min-height: 90vh;
+}
+h1.title {
+    width: 100%;
+    margin: 0 0;
+    text-transform: uppercase;
+    font-size: 50px;
+    text-align: center;
+    font-weight: 1000;
+}
+.light-mode h1.title {
+    color:rgb(0, 0, 0);
+}
+.project {
+    width: 96vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
 }
 .list_project {
-    /* display: grid; */
     position: relative;
+    /* margin: 30px 30px 20px 0; */
+    margin: 20px;
 }
 img.preview {
     width: 300px;
+    border-radius: 10px;
+}
+.div_link {
+    width: 100%;
+    height: 98%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 10px;
+
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.div_link:hover {
+    background-color: rgba(0, 0, 0, 0.345);
+    opacity: 1;
+}
+
+.list_project:nth-child(1) {
+    display: none;
+}
+a.link_project {
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(251, 251, 251);
+    color: black;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: bold;
 }
