--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -7,17 +7,32 @@ body {
 .main {
     min-height: 90vh;
 }
-h1.title {
+.navbar {
+    background-color: black;
+}
+.light-mode .navbar {
+    background-color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+
+span.title {
     width: 100%;
     margin: 0 0;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
-    font-weight: 1000;
+    font-weight: bolder;
 }
-.light-mode h1.title {
+
+.light-mode span.title {
     color:rgb(0, 0, 0);
 }
+
 .project {
     width: 96vw;
     display: flex;
@@ -26,15 +41,19 @@ h1.title {
     justify-content: center;
     padding: 10px;
 }
+
 .list_project {
     position: relative;
-    /* margin: 30px 30px 20px 0; */
     margin: 20px;
 }
+
 img.preview {
     width: 300px;
     border-radius: 10px;
+    border: 2px double rgb(235, 28, 231);
+    box-shadow: rgba(255, 83, 3, 0.842) 0px 5px 15px;
 }
+
 .div_link {
     width: 100%;
     height: 98%;
@@ -50,6 +69,7 @@ img.preview {
     top: 0;
     left: 0;
 }
+
 .div_link:hover {
     background-color: rgba(0, 0, 0, 0.345);
     opacity: 1;
@@ -58,6 +78,7 @@ img.preview {
 .list_project:nth-child(1) {
     display: none;
 }
+
 a.link_project {
     text-decoration: none;
     text-align: center;
@@ -66,4 +87,9 @@ a.link_project {
     padding: 10px;
     border-radius: 20px;
     font-weight: bold;
+}
+a.link_project:hover {
+    /* transform: scale(1.1);
+    transition: .5s ease-in; */
+    background-image: linear-gradient(45deg, rgba(246, 0, 250, 0.63) 28%, rgba(0, 238, 255, 0.78) 100%);
 }
