--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -66,9 +66,12 @@
   display: flex;
   justify-content: center;
   font-size: 30px;
-  font-weight: bold;
   margin-top: 22px;
   color: var(--white);
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 7px;
+  text-align: center;
 }
 
 .description {
