--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,7 @@
 
 html {
   /* font-family: 'Microsoft Jhenghei', 'lanting', Arial; */
-  /* font-family: 'Courier New', Courier, monospace; */
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
