--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -12,6 +12,80 @@
   display: none;
 }
 
+
+.loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  overflow: hidden;
+}
+
+.window-left, .window-right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  background-color: #1a1b1a;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  z-index: 1;
+}
+
+.window-left {
+  left: 0;
+  animation: 2s closeLeft forwards;
+}
+
+.window-right {
+  right: 0;
+  animation: 2s closeRight forwards;
+}
+
+.loader {
+  border: 4px solid var(--white);
+  border-top: 4px solid var(--blue);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  animation-iteration-count: 3;
+  z-index: 2;
+}
+.hidden {
+  display: none;
+}
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@keyframes closeLeft {
+  0%, 50% { transform: translateX(0%); }
+  100% { transform: translateX(-100%); }
+}
+
+@keyframes closeRight {
+  0%, 50% { transform: translateX(0%); }
+  100% { transform: translateX(100%); }
+}
+
+.content {
+  display: none; /* Ẩn nội dung trang web khi loading */
+}
+
+
+
+
+
 .main{
   width: 100vw;
   height: 74vh;
