--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,11 @@
 
 html {
   /* font-family: 'Microsoft Jhenghei', 'lanting', Arial; */
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
   background-color: var(--black);
-  /* transition: background-color 1s cubic-bezier(0.5, 0.1, 0.5, 1); */
-  /* margin: 0;
-  padding: 0; */
   display: block;
   max-height: 100vh;
   max-width: 100vw;
