--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -18,10 +18,11 @@
 }
 
 .main img {
-  /* margin-top: 20px; */
+  margin-top: 80px;
   max-width: 100vw;
   width: 800px;
   border: 3px double pink;
+  box-shadow: rgba(7, 231, 227, 0.704) 0px 5px 15px;
 }
 
 .main a {
