--- a/assets/css/css2/style_project.css
+++ b/assets/css/css2/style_project.css
@@ -2,7 +2,6 @@
 body {
     overflow-x: hidden !important;
     overflow-y: auto !important;
-    
 }
 
 .main {
@@ -21,11 +20,12 @@ body {
 /*__________________ [ Style ] _________________________________________________________________*/
 span.title {
     width: 100%;
-    margin: 0 0;
+    margin: 0 0 50px 0;
     text-transform: uppercase;
     font-size: 40px;
     text-align: center;
     font-weight: bolder;
+    text-shadow: rgba(193, 176, 176, 0.956) 0px 5px 15px;
 }
 
 .light-mode span.title {
