--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -15,10 +15,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.142);
 
   position: fixed !important;
   top: 0;
-
+  left: 0;
   z-index: 99;
 }
 
@@ -83,11 +84,11 @@
 .list li a {
   margin-top: 10px;
   text-decoration: none;
-  color: var(--trueWhite);
+  color: var(--white);
 }
 
 .list li a:hover, .navbar-header-logo a:hover {
-  font-weight: bold;
+  color: var(--trueWhite);
 }
 
 .list li:nth-child(1):hover::after,
