--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -74,13 +74,14 @@ ul {
   list-style: none;
 }
 
-/*_________________________________________________ [ Responsive ] ____________________*/
+/*_________________________________________________ [ css ] ____________________*/
 
 .main {
   background-color: var(--trueBlack);
-  height: 2000px;
+  /* height: 2000px; */
   top: 0px;
   display: block;
+  padding-bottom: 30px;
 }
 
 .background_img {
@@ -225,7 +226,7 @@ ul {
   align-items: center;
   justify-content: center;
 
-  background-color: rgb(94, 93, 93);
+  background-color: rgb(43, 41, 41);
   border-radius: 10px;
 
 }
@@ -258,6 +259,9 @@ ul {
 }
 
 /*_________________________________________________ [ Basic Infor ] ____________________*/
+.basic_infor {
+  display: none;
+}
 .iuwk_iag {
   margin: 20px;
 }
@@ -288,6 +292,8 @@ ul {
 .card_information {
   width: 600px;
   margin: auto;
+
+  font-family: 'Consloas', monospace;
 }
 .card_information_code {
   /* padding: 10px 0px; */
@@ -345,6 +351,23 @@ ul {
 }
 .code_color_yellow {
   color: rgb(255, 187, 0);
+}
+
+/*_________________________________________________ [ banner Elysia ] ____________________*/
+
+/*_________________________________________________ [ banner Elysia ] ____________________*/
+.img_banner_elysia {
+  /* width: 100%; */
+  /* height: 300px; */
+  object-fit: cover;
+  border-radius: 10px;
+  margin: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+
 }
 /*_________________________________________________ [ Responsive ] ____________________*/
 @media (min-width: 1023px) {
