--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -34,6 +34,9 @@ body {
   margin: 0px;
   padding: 0px;
 }
+html {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
 .navbar {
   z-index: 100;
@@ -142,6 +145,7 @@ ul {
   left: -33px;
   top: -25px;
   width: 190px;
+  cursor: none;
 }
 
 .status_discord {
@@ -381,6 +385,7 @@ ul {
   width: 64px;
   border-radius: 50%;
   margin-right: 10px;
+  cursor: none;
 }
 
 .iuwyj .post_name {
@@ -402,6 +407,7 @@ ul {
   margin-bottom: 10px;
   max-height: 320px;
   max-width: 1100px;
+  cursor: none;
 }
 
 .hashtag {
