--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -35,7 +35,7 @@ body {
   padding: 0px;
 }
 html {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .navbar {
@@ -371,12 +371,18 @@ div#main_post_scroll {
 }
 div#items_scroll {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .post_item {
   background-color: rgb(70, 70, 70);
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 20px;
+}
+.post_item:last-child() {
+  margin-bottom: 0px;
 }
 .post_infor {
   display: flex;
@@ -391,16 +397,19 @@ div#items_scroll {
 }
 
 .iuwyj .post_name {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
 }
+.iuwyj .post_time {
+  font-size: 16px;
+}
 .tittle_post {
-  font-size: 27px;
+  font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 .content_post {
-  font-size: 15px;
+  font-size: 14px;
   margin: 10px auto;
 }
 .post_img img {
@@ -448,8 +457,7 @@ div.jhagi_elysia {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-  max-height: 700px;
+  max-height: 680px;
   padding: 20px;
   max-width: 336px;
   border-radius: 10px;
@@ -458,13 +466,15 @@ div.jhagi_elysia {
 .jhagi_elysia img {
   width: 100%;
   border-radius: 10px;
+  max-height: 500px;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .best_quotes {
   margin: 20px auto;
   font-size: 18px;
   font-weight: bold;
-  color: rgb(255, 0, 255);
+  color: rgb(255, 255, 255);
   text-align: center;
 }
 /*_________________________________________________ [ banner Elysia ] ____________________*/
