--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -395,6 +395,11 @@ div#items_scroll {
   margin-right: 10px;
   cursor: none;
 }
+.video_post {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 10px;
+}
 
 .iuwyj .post_name {
   font-size: 18px;
@@ -412,13 +417,17 @@ div#items_scroll {
   font-size: 14px;
   margin: 10px auto;
 }
+.post_img {
+  margin: 20px auto 20px auto;
+}
 .post_img img {
   border-radius: 10px;
   object-fit: cover;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   max-height: 320px;
   max-width: 1100px;
   cursor: none;
+  
 }
 .hashtag {
   color: rgb(0, 119, 255);
@@ -490,6 +499,7 @@ div.jhagi_elysia {
   display: none;
 }
 /*_________________________________________________ [ Responsive ] ____________________*/
+
 @media (min-width: 1023px) {
 
 }
