--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -266,7 +266,22 @@ ul {
   border-radius: 30px;
   object-fit: cover;
 }
+.like_icons {
+  padding: 3px;
+  border-radius: 50%;
+  transition: ease-in-out 0.3s;
+  cursor: pointer;
+}
+.like_false {
 
+  display: none;
+}
+.like_true {
+  display: none;
+  color: rgb(255, 255, 255);
+  transform: scale(1.1);
+  background-color: red;
+}
 /*_________________________________________________ [ Basic Infor ] ____________________*/
 .basic_infor {
   display: none;
