--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -261,11 +261,6 @@ ul {
   border-bottom: 3px solid rgb(255, 0, 221);
 }
 
-.img_banner {
-  width: 60%;
-  border-radius: 30px;
-  object-fit: cover;
-}
 .like_icons {
   padding: 3px;
   border-radius: 50%;
@@ -507,15 +502,82 @@ div.jhagi_elysia {
   text-align: center;
 }
 /*_________________________________________________ [ banner Elysia ] ____________________*/
-.img_banner_elysia {
-  object-fit: cover;
-  border-radius: 10px;
-  margin: auto;
+div.img_banner_elysia {
+  margin-top: 20px;
+  height: 90vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
 
+  display: none;
+}
+
+.main_ely {
+  position: relative;
+  margin: auto;
+  max-width: var(--max-witdh);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img.img_banner {
+  margin: auto;
+  width: 90%;
+  border-radius: 30px;
+  object-fit: cover;
+}
+
+.main_ely:hover div.tool_ely_active {
+  display: flex;
+}
+
+div.tool_ely {
+  width: 90%;
+  height: 100px;
+  position: absolute;
+  bottom: 0px;
+  left: 61px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
+  background: linear-gradient(0deg, rgba(231,0,255,1) 0%, rgba(205,0,255,0) 100%);
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+
+  display: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.tool_ely ion-icon {
+  font-size: 24px;
+  margin: 0px 10px;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  transition: color 0.3s ease-out;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.tool_ely ion-icon:hover {
+  color: rgb(255, 0, 255);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 183, 255);
+}
+.icon_control {
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  transition: color 0.3s ease-out;
+  border: 1px solid rgb(0, 183, 255);
+  display: none;
+}
+.play_icon {
+
+}
+
+.contr_volumeicon {
   display: none;
 }
 /*_________________________________________________ [ Responsive ] ____________________*/
