--- a/assets/css/css2/style_about.css
+++ b/assets/css/css2/style_about.css
@@ -45,6 +45,9 @@ a {
 .navbar {
   z-index: 100;
 }
+.menu-navbar-right {
+  width: unset !important;
+}
 
 .light-mode .container {
   background-color: var(--white);
