--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -143,8 +143,8 @@
 }
 
 .myavt:hover {
-  transition: transform 0.5s ease;
-  transform: scale(1.1);
+  /* transition: transform 0.5s ease;
+  transform: scale(1.1); */
 }
 
 .name {
