--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -51,7 +51,7 @@
   display: flex;
   align-items: center;
 
-  width: 400px;
+  /* width: 400px; */
   z-index: 100;
 }
 
@@ -91,7 +91,7 @@
   color: var(--trueWhite);
 }
 
-.list li:nth-child(1):hover::after,
+/* .list li:nth-child(1):hover::after,
 .list li:nth-child(2):hover::after,
 .list li:nth-child(3):hover::after,
 .list li:nth-child(4):hover::after,
@@ -120,7 +120,7 @@
 
   border-bottom: 3px  solid var(--green);
   border-right: 3px  solid var(--green);
-}
+} */
 
 .list li:nth-child(6) {
   margin: 0;
