--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,9 @@ body {
   color:var(--black); /* Màu chữ khi bôi đen */
 }
 
-
+ul, li {
+  list-style: none;
+}
 
 /*______________ [ light-mode ] _____________________________________________________________________*/
 body.light-mode  {
